# star-burger

./: .gitignore  DEV_README.md  DOCKER_DEPLOY_README.md  README.md  deploy_star_burger.sh  dev_readme.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.production.db.yml  docker-compose.production.web.yml  docker-compose.production.yml  docker-compose.yaml  docker-compose.yml  docker_deploy.sh  docker_restart.sh  package-lock.json  package.json  pyproject.toml  redeploy.sh  requirements.txt
backend/: Dockerfile
backend/src/distancesapp/: apps.py  models.py  yandex_api.py
backend/src/foodcartapp/: serializer.py  tests.py  urls.py
backend/src/restaurateurapp/: apps.py  urls.py  views.py
backend/src/star_burger/: settings.py  urls.py
distances/migrations/: 0001_initial.py
etc/backend/: Dockerfile
etc/frontend/: Dockerfile
etc/nginx/: Dockerfile
foodcartapp/: admin.py  form.py  models.py  tests.py  views.py
foodcartapp/fixture/: products.json
foodcartapp/migrations/: 0038_order_productinorder.py  0039_auto_20210808_2000.py  0040_auto_20220409_1623.py  0042_productinorder_price.py  0043_auto_20220417_1005.py  0052_alter_order_who_cook_alter_productinorder_product.py  0053_alter_restaurant_address_and_more.py
frontend/: Dockerfile
restaurateur/: views.py
restaurateur/templates/: order_items.html
sql/: init.sql
star_burger/: settings.py
systemctl_services/: certbot-renewal.service  certbot-renewal.timer  star-burger.service  starburger-clearsessions.service  starburger-clearsessions.timer
(+15 files in other folders)
